--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,23 +3,13 @@
 [workspace]
 resolver = "2"
 members = [
-  "bench_util",
   "cli",
   "core",
   "runtime",
   "serde_v8",
-  "test_ffi",
   "test_util",
-  "ext/broadcast_channel",
   "ext/console",
-  "ext/crypto",
-  "ext/ffi",
-  "ext/net",
-  "ext/url",
-  "ext/web",
-  "ext/webgpu",
-  "ext/webidl",
-  "ext/webstorage",
+  "ext/crypto"
 ]
 exclude = ["test_util/std/hash/_wasm"]
 
@@ -54,8 +44,6 @@ opt-level = 3
 opt-level = 3
 [profile.bench.package.deno_runtime]
 opt-level = 3
-[profile.bench.package.deno_net]
-opt-level = 3
 [profile.bench.package.num-bigint-dig]
 opt-level = 3
 [profile.bench.package.v8]
@@ -63,8 +51,6 @@ opt-level = 3
 [profile.bench.package.serde_v8]
 opt-level = 3
 [profile.bench.package.serde]
-opt-level = 3
-[profile.bench.package.deno_url]
 opt-level = 3
 [profile.bench.package.url]
 opt-level = 3
@@ -90,8 +76,6 @@ opt-level = 3
 opt-level = 3
 [profile.release.package.deno_runtime]
 opt-level = 3
-[profile.release.package.deno_net]
-opt-level = 3
 [profile.release.package.num-bigint-dig]
 opt-level = 3
 [profile.release.package.v8]
@@ -99,8 +83,6 @@ opt-level = 3
 [profile.release.package.serde_v8]
 opt-level = 3
 [profile.release.package.serde]
-opt-level = 3
-[profile.release.package.deno_url]
 opt-level = 3
 [profile.release.package.url]
 opt-level = 3
