--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ members = [
   "serde_v8",
   "test_util",
   "ext/console",
-  "ext/crypto"
+  "ext/url"
 ]
 exclude = ["test_util/std/hash/_wasm"]
 
@@ -27,24 +27,13 @@ incremental = true
 lto = true
 opt-level = 'z' # Optimize for size
 
-# Key generation is too slow on `debug`
-#
-[profile.dev.package.num-bigint-dig]
-opt-level = 3
-
 # Optimize these packages for performance.
 # NB: the `bench` and `release` profiles must remain EXACTLY the same.
 [profile.bench.package.rand]
 opt-level = 3
-[profile.bench.package.flate2]
-opt-level = 3
-[profile.bench.package.miniz_oxide]
-opt-level = 3
 [profile.bench.package.deno_core]
 opt-level = 3
 [profile.bench.package.deno_runtime]
-opt-level = 3
-[profile.bench.package.num-bigint-dig]
 opt-level = 3
 [profile.bench.package.v8]
 opt-level = 3
@@ -68,15 +57,9 @@ opt-level = 3
 # NB: the `bench` and `release` profiles must remain EXACTLY the same.
 [profile.release.package.rand]
 opt-level = 3
-[profile.release.package.flate2]
-opt-level = 3
-[profile.release.package.miniz_oxide]
-opt-level = 3
 [profile.release.package.deno_core]
 opt-level = 3
 [profile.release.package.deno_runtime]
-opt-level = 3
-[profile.release.package.num-bigint-dig]
 opt-level = 3
 [profile.release.package.v8]
 opt-level = 3
