--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,8 @@ opt-level = 3
 opt-level = 3
 [profile.bench.package.serde]
 opt-level = 3
+[profile.bench.package.deno_url]
+opt-level = 3
 [profile.bench.package.url]
 opt-level = 3
 [profile.bench.package.bytes]
@@ -66,6 +68,8 @@ opt-level = 3
 [profile.release.package.serde_v8]
 opt-level = 3
 [profile.release.package.serde]
+opt-level = 3
+[profile.bench.package.deno_url]
 opt-level = 3
 [profile.release.package.url]
 opt-level = 3
