--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -70,6 +70,7 @@ once_cell = "=1.9.0"
 percent-encoding = "=2.1.0"
 pin-project = "=1.0.8"
 rand = { version = "=0.8.4", features = ["small_rng"] }
+deno_url = { version = "0.38.0", path = "../ext/url" }
 regex = "=1.5.4"
 ring = "=0.16.20"
 rustyline = { version = "=9.1.2", default-features = false }
