--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,7 +69,7 @@ opt-level = 3
 opt-level = 3
 [profile.release.package.serde]
 opt-level = 3
-[profile.bench.package.deno_url]
+[profile.release.package.deno_url]
 opt-level = 3
 [profile.release.package.url]
 opt-level = 3
